ADD_LIBRARY(Elem 
AddElem.C  Coordset.C  Element.C  Elemset.C  State.C  SuperElement.C
Beam.d/beamRotation.f
Beam.d/e3dmas.f
Beam.d/EulerBeam.C
Beam.d/frame6.f
Beam.d/g_mass7.f
Beam.d/g_modmstif7.f
Beam.d/g_sands7.f
Beam.d/mass6.f
Beam.d/mass7.f
Beam.d/modmstif6.f
Beam.d/modmstif7.f
Beam.d/sands6.f
Beam.d/sands7.f
Beam.d/TimoshenkoBeam.C
Beam.d/transf.f
BelytschkoTsayShell.d/BelytschkoTsayShell.C
BelytschkoTsayShell.d/fint3dshl_hypo.f90
BelytschkoTsayShell.d/base_mech_transf.f90
BelytschkoTsayShell.d/base_mhd_fem.f90
BelytschkoTsayShell.d/base.f90
BelytschkoTsayShell.d/base_mech_tens.f90
BelytschkoTsayShell.d/hypoelas.f90
BelytschkoTsayShell.d/damage.f90
BelytschkoTsayShell.d/base_mhd_hgc.f90
BelytschkoTsayShell.d/fint3dshl_hgc.f90
BelytschkoTsayShell.d/massl3dshl.f90
BelytschkoTsayShell.d/parseinp.f90
BelytschkoTsayShell.d/cri_effstr.f90
BelytschkoTsayShell.d/cri_mpts.f90
BelytschkoTsayShell.d/cri_xw_j2pstrs.f90
BelytschkoTsayShell.d/bc2_3d.f90
Brick20.d/br20mas.f
Brick20.d/br20vmint.f
Brick20.d/Brick20.C
Brick20.d/brik20v.f
Brick20.d/g_br20mas.f
Brick20.d/g_br20vmint.f
Brick20.d/g_brik20v.f
Brick20.d/g_h20shpe.f
Brick20.d/g_sands20.f
Brick20.d/g_vol20.f
Brick20.d/h20shpe.f
Brick20.d/hexa20.f
Brick20.d/Hexa20ShapeFct.C
Brick20.d/hxgaus20.f
Brick20.d/sands20.f
Brick20.d/vol20.f
Brick32.d/Brick32.C
Brick32.d/brk32.f
Brick32.d/Hexa32ShapeFct.C
Brick.d/br8mas.f
Brick.d/brik8v.f
Brick.d/brkcmt.f
Brick.d/EightNodeBrick.C
Brick.d/h8shpe.f
Brick.d/Hexa8ShapeFct.C
Brick.d/hxgaus.f
Brick.d/sands17c.f
Brick.d/sands17.f
Brick.d/thermbr8mas.f
Brick.d/ThermBrick.C
Brick.d/thermbrik8v.f
Brick.d/vol17.f
BulkFluid.d/PentaBulk.C  BulkFluid.d/TetraBulk.C  BulkFluid.d/TriangleBulk.C
CompShell.d/compatt.f
CompShell.d/compbBB.f
CompShell.d/compbBM.f
CompShell.d/compbMB.f
CompShell.d/compbMM.f
CompShell.d/compchk2.f
CompShell.d/compchk.f
CompShell.d/compcrd2.f
CompShell.d/compcrd.f
CompShell.d/compcst1.f
CompShell.d/compcst.f
CompShell.d/compfrot.f
CompShell.d/comphBB.f
CompShell.d/comphBM.f
CompShell.d/comphMB.f
CompShell.d/comphMM.f
CompShell.d/compjac.f
CompShell.d/complay.f
CompShell.d/compmrot.f
CompShell.d/compms.f
CompShell.d/compthmfr.f
CompShell.d/Compo3NodeShell.C
CompShell.d/Compo4NodeShell.C
CompShell.d/compst.f
CompShell.d/compvms.f
CompShell.d/g_compbBB.f
CompShell.d/g_compbBM.f
CompShell.d/g_compbMB.f
CompShell.d/g_compbMM.f
CompShell.d/g_compcrd2.f
CompShell.d/g_compcrd.f
CompShell.d/g_compcst.f
CompShell.d/g_compfrot.f
CompShell.d/g_comphBB.f
CompShell.d/g_comphBM.f
CompShell.d/g_comphMB.f
CompShell.d/g_comphMM.f
CompShell.d/g_complay.f
CompShell.d/g_compms1.f
CompShell.d/g_compms2.f
CompShell.d/g_compst.f
CompShell.d/g_compvms.f
CompShell.d/g_straineq.f
CompShell.d/g_transform.f
CompShell.d/g_trirotation.f
ContactResistance.d/BrickContact.C  ContactResistance.d/QuadContact.C
ContactResistance.d/PentaContact.C
Convection.d/BarConvec.C
Convection.d/convecquad.f
Convection.d/QuadConvec.C
Convection.d/trianarea.f
Convection.d/TriangleConvec.C
CtcVirtualElt.d/CtcVirtualElt.C
FelippaShell.d/EffMembraneTriangleInstance.cpp
FelippaShell.d/AndesBendingTriangleInstance.cpp
FelippaShell.d/ShellElementInstance.cpp
FelippaShell.d/FelippaShell.C
FelippaShell.d/FelippaShellX2.C
FelippaShell.d/ShellMaterial.cpp
FelippaShell.d/ShellMaterialType0.cpp
FelippaShell.d/ShellMaterialType1.cpp
FelippaShell.d/ShellMaterialTypes2And3.cpp
FelippaShell.d/ShellMaterialType4.cpp
FluidQuad.d/BarSloshFS.C    FluidTetra.d/HEVibTetra.C
FluidQuad.d/HEVibQuadGal.C  FluidTetra.d/SloshTetra.C
FluidQuad.d/SloshQuadGal.C  FluidTriangle3.d/SloshTriangleFS.C
FluidQuad.d/barsloshfs.f  FluidQuad.d/slsas2.f  FluidQuad.d/thermquad3b.f
Helm.d/GaussRule.C
Helm.d/GaussRules.C
Helm.d/genTetra10.C
Helm.d/helmbr8mas.f
Helm.d/HelmBrick32.C
Helm.d/HelmBrick.C
Helm.d/HelmBrickGLS.C
Helm.d/helmbrik8v.f
Helm.d/HelmElement.C
Helm.d/HelmIsoParamHexa.C
Helm.d/HelmIsoParamQuad.C
Helm.d/HelmIsoParamTetra.C
Helm.d/HelmIsoParamTri.C
Helm.d/HelmLagQuadGal.C
Helm.d/HelmPenta26.C
Helm.d/HelmPenta.C
Helm.d/HelmQuad8Gal.C
Helm.d/HelmQuadGal.C
Helm.d/HelmQuadGls.C
Helm.d/HelmSpectralIsoParamHexa.C
Helm.d/HelmSpectralIsoParamQuad.C
Helm.d/HelmTri3Gal.C
Helm.d/HelmTri3Gls.C
Helm.d/HelmTri6Gal.C
Helm.d/IsoParamUtils2d.C
Helm.d/IsoParamUtils.C
Helm.d/LEIsoParamHexa.C
Helm.d/LEIsoParamQuad.C
Helm.d/LEIsoParamTetra.C
Helm.d/LEIsoParamTri.C
Helm.d/linegaussq.f
Helm.d/lub3.C
Helm.d/lud3.C
Helm.d/q4d1dofmas.f
Helm.d/Q4shape2.C
Helm.d/quad1dofm.f
Helm.d/quad8mass1.f
Helm.d/quad8shape.f
Helm.d/quad8stif1.f
Helm.d/quadgaussq.f
Helm.d/Tetra10HelmGal.C
Helm.d/TetraHelmGal.C
Helm.d/TetraHelmGLS.C
Helm.d/trig6mass1.f
Helm.d/trig6shape.f
Helm.d/trig6stif1.f
Joint.d/ConstantDistanceConstraint.C
Joint.d/CylindricalJoint.C
Joint.d/DotConstraintType1.C
Joint.d/DotConstraintType2.C
Joint.d/exp-map.C
Joint.d/LinearConstraintType1.C
Joint.d/ParallelAxesConstraintType1.C
Joint.d/ParallelAxesConstraintType2.C
Joint.d/PrismaticJoint.C
Joint.d/RevoluteJoint.C
Joint.d/SphericalJoint.C
Joint.d/TranslationalJoint.C
Joint.d/UniversalJoint.C
Joint.d/DotConstraintType1a.C
Joint.d/RevoluteActuator.C
Joint.d/PointLineDistanceConstraint.C
Membrane.d/mass8.f
Membrane.d/Membrane.C
Membrane.d/sands19.f
Membrane.d/trimem.f
Membrane.d/trirotationx.f
Membrane.d/FourNodeMembrane.C
MpcElement.d/FsiElement.C
MpcElement.d/MpcElement.C
NonLinearity.d/2DMat.C
NonLinearity.d/ShapeFunction.C
NonLinearity.d/ElaLinIsoMat.C
NonLinearity.d/GaussIntgElem.C
NonLinearity.d/NLHexahedral.C
NonLinearity.d/NLPentahedral.C
NonLinearity.d/NLTetrahedral.C
NonLinearity.d/NLMembrane.C
NonLinearity.d/StrainEvaluator.C
NonLinearity.d/felippa.C
Penta15.d/Penta15.C
Penta15.d/Penta15ShapeFct.C
Penta26.d/Penta26.C
Penta26.d/Penta26ShapeFct.C
Penta.d/eg3c2c.f
Penta.d/grav24.f
Penta.d/mass24.f
Penta.d/mstf24.f
Penta.d/Penta6ShapeFct.C
Penta.d/Pentahedral.C
Penta.d/sands24.f
Quad4.d/FourNodeQuad.C
Quad4.d/getcmt.f
Quad4.d/lgauss.f
Quad4.d/q4dmas.f
Quad4.d/q4shpe.f
Quad4.d/qgauss.f
Quad4.d/quad2d.f
Quad4.d/quad4m.f
Quad4.d/Quad.C
Quad4.d/sands2.f
Quad4.d/strainvmc.f
Quad4.d/strainvm.f
Radiation.d/BarRadiation.C
Radiation.d/TriangleRadiation.C
Radiation.d/QuadRadiation.C
Rigid.d/RigidBeam.C
Rigid.d/RigidEightNodeBrick.C
Rigid.d/RigidRotnSprlink.C
Rigid.d/RigidSolid6Dof.C
Rigid.d/RigidSolid.C
Rigid.d/RigidSpring.C
Rigid.d/RigidThreeNodeShell.C
Rigid.d/RigidTransSprlink.C
Rigid.d/RigidTwoNodeTruss.C
Rigid.d/RigidFourNodeShell.C
Shear.d/b3dstf.f
Shear.d/shearmass.f
Shear.d/ShearPanel.C
Shear.d/shearpanel.f
Shear.d/shearpanelF.f
Shear.d/spstress.f
Shear.d/vec.f
Shell.d/basico.f
Shell.d/ConnectedTri.C
Shell.d/FourNodeShell.C
Shell.d/ExpFourNodeShell.C
Shell.d/g_basico.f
Shell.d/g_dummy.f
Shell.d/g_mass8.f
Shell.d/g_membra.f
Shell.d/g_momen.f
Shell.d/g_rotation.f
Shell.d/g_sands8.f
Shell.d/g_sm3mb.f
Shell.d/g_sm3mhe.f
Shell.d/g_smcbh.f
Shell.d/g_straineq.f
Shell.d/g_transform.f
Shell.d/g_tria3d.f
Shell.d/g_trirotation.f
Shell.d/g_vonmis.f
Shell.d/localXY.f
Shell.d/mass8.f
Shell.d/membra.f
Shell.d/momen.f
Shell.d/rotati.f
Shell.d/rotation.f
Shell.d/sands8.f
Shell.d/sm3mb.f
Shell.d/sm3mhe.f
Shell.d/smcbh.f
Shell.d/straineq.f
Shell.d/Therm3NoShell.C
Shell.d/Therm4NoShell.C
Shell.d/ThreeNodeShell.C
Shell.d/transform.f
Shell.d/tria3d.f
Shell.d/trirotation.f
Shell.d/trirot.f
Shell.d/trithmfr.f
Shell.d/vonmis.f
Sommerfeld.d/conv.C
Sommerfeld.d/CurvedLine2SommerBC.C
Sommerfeld.d/IsoParamLineSommer.C
Sommerfeld.d/IsoParamQuadSommer.C
Sommerfeld.d/IsoParamTriLineSommer.C
Sommerfeld.d/IsoParamTriSommer.C
Sommerfeld.d/LagLineSommer.C
Sommerfeld.d/Line2SommerBC.C
Sommerfeld.d/LineSommerBC.C
Sommerfeld.d/q4d1sommas.f
Sommerfeld.d/QuadSommerBC.C
Sommerfeld.d/SommerElement.C
Sommerfeld.d/SpectralIsoParamQuadSommer.C
Sommerfeld.d/Tri6Gauss.C
Sommerfeld.d/Triangle6SommerBC.C
Sommerfeld.d/TriangleSommerBC.C
Sommerfeld.d/QuadPressureBC.C
Sommerfeld.d/TrianglePressureBC.C
Spring.d/mstf11.f
Spring.d/mstf21.f
Spring.d/mstf22.f
Spring.d/outprd.f
Spring.d/RotnSprlink.C
Spring.d/TorSpring.C
Spring.d/TransSprlink.C
Tetra10.d/dpe25.C
Tetra10.d/mass25.f
Tetra10.d/mstf25.f
Tetra10.d/p2thcoupl.C
Tetra10.d/p2thcoupl_dat.C
Tetra10.d/sands25.f
Tetra10.d/TenNodeTetrahedral.C
Tetra10.d/Tetra10ShapeFct.C
Tetra10.d/vp1.C
Tetra.d/AddBtCBtoK3DSolid.C
Tetra.d/ec3c2c.f
Tetra.d/em3c2c.f
Tetra.d/er3c2c.f
Tetra.d/fobase.f
Tetra.d/mass23.f
Tetra.d/mstf23.f
Tetra.d/p1thcoupl.C
Tetra.d/p1thcoupl_dat.C
Tetra.d/sands23.f
Tetra.d/Tetra4ShapeFct.C
Tetra.d/Tetrahedral.C
Tetra.d/vmelmvc.f
Tetra.d/vmelmv.f
Tetra.d/ThermIsoParamTetra.C
ThermQuad.d/htsas2.f
ThermQuad.d/q4maslumpheat.f
ThermQuad.d/Therm3DQuad.C
ThermQuad.d/thermquad3a.f
ThermQuad.d/thermquad3b.f
ThermQuad.d/ThermQuadGal.C
ThermQuad.d/veccrs.f
Triangle3.d/ThermTriangle.C
Triangle3.d/Triangle3.C
Truss.d/Therm2NodeBar.C
Truss.d/TwoNodeTruss.C
Truss.d/TwoNodeTrussF.C
Utils.d/AddBtCBtoK3DSolid.C
Utils.d/CheckJacobian.C
Utils.d/RotateConstitutiveMatrix.C
Utils.d/StressAndStrain3DSolid.C
DEM.d/DEMElement.C
DEM.d/DEMHelm2d.C
DEM.d/DEMHelm3d.C
DEM.d/DEMLE2d.C
DEM.d/DEMLE3d.C
)

SET(INC_DIR ..)

INCLUDE_DIRECTORIES( ${INC_DIR} )
