ADD_LIBRARY(Material Material.cpp LinearElasticMaterial.cpp 
            NeoHookean.cpp MooneyRivlin.cpp Ogden.cpp
            IsotropicLinearElasticJ2PlasticMaterial.cpp
            IsotropicLinearElasticJ2PlasticPlaneStressMaterial.cpp
            KorkolisKyriakidesPlaneStressMaterial.cpp
            KorkolisKyriakidesPlaneStressMaterialWithExperimentalYielding.cpp 
            KorkolisKyriakidesPlaneStressMaterialWithExperimentalYielding2.cpp)
