ADD_LIBRARY(Mortar  FaceElement.d/FaceElemSet.C 
	FaceElement.d/AddFaceElemInFaceElemSet.C 
  	FaceElement.d/SurfaceEntity.C 
	FaceElement.d/FaceElement.C 
	FaceElement.d/FaceQuad4.d/FaceQuad4.C 
	FaceElement.d/FaceQuad8.d/FaceQuad8.C 
	FaceElement.d/FaceQuad9.d/FaceQuad9.C 
	FaceElement.d/FaceQuad12.d/FaceQuad12.C 
	FaceElement.d/FaceTri3.d/FaceTri3.C 
	FaceElement.d/FaceTri6.d/FaceTri6.C 
	FaceElement.d/FaceTri10.d/FaceTri10.C 
	FaceElement.d/FacePoint1.d/FacePoint1.C 
	MortarDriver.d/MortarHandler.C 
	FFIPolygon.d/FFIPolygon.C 
	FFIPolygon.d/TriFacet.C 
	MortarElement.d/MortarElement.C 
	MortarElement.d/MortarQuad4.d/StdMortarQuad4.C 
	MortarElement.d/MortarQuad4.d/DualMortarQuad4.C 
	MortarElement.d/MortarQuad8.d/StdMortarQuad8.C 
	MortarElement.d/MortarQuad12.d/StdMortarQuad12.C 
	MortarElement.d/MortarTri3.d/StdMortarTri3.C 
	MortarElement.d/MortarTri3.d/DualMortarTri3.C 
	MortarElement.d/MortarTri6.d/StdMortarTri6.C 
	MortarElement.d/MortarTri10.d/StdMortarTri10.C 
	MortarElement.d/CreateMortarElement.C
	NodalMortarShapeFct.d/NodalMortarShapeFct.C 
	Divers.d/Divers.C)
