ADD_LIBRARY( pitadriver
ActivityImpl.C
AffineIntegratorPropagator.C
AlternatingIntegratorPropagator.C
CommManager.C
CommManagerImpl.C
CommSplitter.C
DynamStateBasisWrapper.C
DynamState.C
DynamStateOps.C
DynamStatePlainBasis.C
DynamStateReconstructorImpl.C
DynamStateReductorImpl.C
DynamTimeIntegrator.C
FullCorrectionPropagatorImpl.C
HomogeneousGenAlphaIntegrator.C
IncrementalPostProcessor.C
InitialSeedTask.C
IntegratorPropagator.C
IntegratorSeedInitializer.C
JumpBuilder.C
JumpProjectorImpl.C
LeastSquareSolver.C
LinearDriverImpl.C
LinearDynamOps.C
LinearGenAlphaIntegrator.C
LinearizedPropagator.C
LinearPostProcessor.C
LoadBalancer.C
LocalTimeSlice.C
Log.C
NearSymmetricSolver.C
NlDriverImpl.C
NlDynamOps.C
NlDynamPostProcessor.C
NlDynamTimeIntegrator.C
NlPostProcessor.C
NlSeedInitializerImpl.C
NlTimeSlice.C
PitaNonLinDynam.C
PivotedCholeskySolver.C
PostProcessingManager.C
PostProcessor.C
ProjectorPropagator.C
ReducedCorrectionPropagatorImpl.C
RemoteDynamPropagatorProxy.C
RemoteDynamPropagatorServer.C
RemoteSeedInitializerProxy.C
RemoteStateMpiImpl.C
RemoteStateTask.C
RemoteTimeSlice.C
SeedErrorEvaluator.C
SeedUpdater.C
SimpleSeedInitializer.C
TimedExecution.C
TimeSlice.C
TimeSliceImpl.C
TimeSliceMapping.C
TimeSliceNetwork.C
UpdatedSeedAssemblerImpl.C
lev2pchol.f
lev3pchol.f
blas_dmax_val.f
Std.d/AffineBasisCollector.C
Std.d/HomogeneousTaskManager.C
Std.d/IncrementalPropagation.C
Std.d/LinearPropagatorManager.C
Std.d/LinearProjectionNetwork.C
Std.d/NonHomogeneousTaskManager.C
Std.d/ReducedLinearDriverImpl.C
Std.d/RemoteCoarseCorrectionServer.C
Std.d/RemoteSeedInitializerServer.C
Std.d/SliceMapping.C
Hts.d/AffineHalfTimeSliceImpl.C
Hts.d/BasisCollectorImpl.C
Hts.d/HalfTimeSlice.C
Hts.d/HomogeneousTaskManager.C
Hts.d/LinearTaskManager.C
Hts.d/LinearProjectionNetworkImpl.C
Hts.d/LinearLocalNetwork.C
Hts.d/NlDriverImpl.C
Hts.d/NlTaskManager.C
Hts.d/NonHomogeneousBasisCollectorImpl.C
Hts.d/NonHomogeneousTaskManager.C
Hts.d/PropagatorManager.C
Hts.d/ReducedLinearDriverImpl.C
Hts.d/RemoteCoarseCorrectionServer.C
Hts.d/RemoteSeedInitializerServer.C
Hts.d/SliceMapping.C)
