ADD_LIBRARY( pitadriver
AffineIntegratorPropagator.C
CommSplitter.C
ConcurrentBasisManager.C
DynamStateBasisWrapper.C
DynamState.C
DynamStateOps.C
DynamStatePlainBasis.C
DynamStateReconstructor.C
DynamStateReductor.C
DynamTimeIntegrator.C
FullCorrectionPropagatorImpl.C
HierarchicalTimer.C
HomogeneousGenAlphaIntegrator.C
IncrementalPostProcessor.C
InitialSeedTask.C
IntegratorPropagator.C
IntegratorSeedInitializer.C
JumpBuilder.C
JumpProjectorImpl.C
LeastSquareSolver.C
LinearDriverImpl.C
LinearDynamOps.C
LinearGenAlphaIntegrator.C
LinearizedPropagator.C
LinearPostProcessor.C
LoadBalancer.C
Log.C
NearSymmetricSolver.C
NlDriverImpl.C
NlDynamOps.C
NlDynamTimeIntegrator.C
NlPostProcessor.C
OrthoDynamStateBasis.C
PitaNonLinDynam.C
PivotedCholeskySolver.C
PostProcessingManager.C
PostProcessor.C
ReducedCorrectionPropagatorImpl.C
RemoteDynamPropagatorProxy.C
RemoteDynamPropagatorServer.C
RemoteSeedInitializerProxy.C
RemoteStateMpiImpl.C
RemoteStateTask.C
SeedDifferenceEvaluator.C
SeedUpdater.C
SimpleSeedInitializer.C
TimedExecution.C
UpdatedSeedAssemblerImpl.C
UserProvidedSeedInitializer.C
lev2pchol.f
lev3pchol.f
blas_dmax_val.f
Std.d/AffineBasisCollector.C
Std.d/HomogeneousTaskManager.C
Std.d/IncrementalPropagation.C
Std.d/LinearPropagatorManager.C
Std.d/LinearProjectionNetwork.C
Std.d/NonHomogeneousTaskManager.C
Std.d/ReducedLinearDriverImpl.C
Std.d/RemoteCoarseCorrectionServer.C
Std.d/RemoteSeedInitializerServer.C
Std.d/SliceMapping.C
Hts.d/AffineHalfTimeSliceImpl.C
Hts.d/BasicHalfTimeSliceImpl.C
Hts.d/BasisCollectorImpl.C
Hts.d/CorrectionReconstructor.C
Hts.d/CorrectionReductor.C
Hts.d/HalfTimeSlice.C
Hts.d/HomogeneousTaskManager.C
Hts.d/LinearTaskManager.C
Hts.d/LinearProjectionNetworkImpl.C
Hts.d/LinearLocalNetwork.C
Hts.d/NlDriver.C
Hts.d/NlLocalNetwork.C
Hts.d/NlProjectionNetwork.C
Hts.d/NlPropagatorManager.C
Hts.d/NlTaskManager.C
Hts.d/NonHomogeneousBasisCollectorImpl.C
Hts.d/NonHomogeneousTaskManager.C
Hts.d/PropagationDataSharing.C
Hts.d/AffinePropagatorManager.C
Hts.d/ReducedLinearDriverImpl.C
Hts.d/RemoteCoarseCorrectionServer.C
Hts.d/RemoteSeedInitializerServer.C
Hts.d/SliceMapping.C)
